
2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, codegen.c, parser.y, scanner.l, tree.h, tree.c: renamed
	  CB_PROGRAM_TYPE to COB_MODULE_TYPE_PROGRAM and CB_FUNCTION_TYPE to 
	  COB_MODULE_TYPE_FUNCTION and moved definition to libcob/common.h
	* codegen.c (output_module_init): deactivated generation of currently
	  unused module_returning

2017-12-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (file_status_clause): FR #51 added parsing for
	  secondary VSAM status, unconformable to any other than IBM/MVS
	  where it is ignored (with a warning with -Wall)
	* config.c, cobc.h: parse standard-define, checking for valid entry
	  and actually setting it again

2017-12-24  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, config.c, field.c: added screen-section-clauses option to
	  set rules for SCREEN SECTION item clauses.
	* field.c: removed "alphanumeric value is expected" warning when using
	  numeric VALUEs in the SCREEN SECTION.

2017-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, parser.y (begin_implicit_statement), codegen.c (output_stmt):
	  fixed duplicated trace code generation for implicit statements

2017-12-22  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_attr): set flag COB_FLAG_IS_FP for all FLOAT types

2017-12-21  Ron Norman <rjn@inglenet.com>

	* codegen.c: For REPORT pass CODE value to report structure
	* parser.y: pass back CODE value

2017-12-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): fix endless loop on invalid literals for
	  systems that define EOF as -1

2017-12-15  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: adding/removing a register now removes the reserved word
	  with the same name (if it exists) (feature request #278).
	* cobc.c (cobc_print_usage): added help text for -f(not-)register.

2017-12-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
