@@ -172,7 +172,7 @@ display-special-fig-consts:	no
 binary-comp-1:			no
 
 # What rules to apply to SCREEN SECTION items clauses
-screen-section-clauses:		std
+screen-section-clauses:		gc
 
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
