@@ -1,8 +1,13 @@
 
+2017-12-26  Edward Hart <edward.dan.hart@gmail.com>
+
+	* cobc.h, config.c, field.c: added more lax "gc" option to
+	  screen-section-clauses.
+
 2017-12-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c, codegen.c, parser.y, scanner.l, tree.h, tree.c: renamed
-	  CB_PROGRAM_TYPE to COB_MODULE_TYPE_PROGRAM and CB_FUNCTION_TYPE to 
+	  CB_PROGRAM_TYPE to COB_MODULE_TYPE_PROGRAM and CB_FUNCTION_TYPE to
 	  COB_MODULE_TYPE_FUNCTION and moved definition to libcob/common.h
 	* codegen.c (output_module_init): deactivated generation of currently
 	  unused module_returning
